<resources>
    <string name="app_name">Gelişmiş Komutlar Unite 5</string>
    <string name="uyg1_isim">Uygulama 1\n(Değer Döndermeyen Metotlar)</string>
    <string name="uyg2_isim">Uygulama 2\n(Değer Dönderen Metotlar)</string>
    <string name="uyg3_isim">Uygulama 3\n(Parametre Alan Metotlar)</string>
    <string name="uyg4_isim">Uygulama 4\n(Metotlarda Aşırı Yükleme)</string>
    <string name="uyg5_isim">Uygulama 5\n(Sınıflar)</string>
    <string name="uyg6_isim">Uygulama 6\n(Kurucu ve Yapıcı Metotlar)</string>
    <string name="uyg7_isim">Uygulama 7\n(Getter ve Setter Metotlar)</string>
    <string name="uyg8_isim">Uygulama 8\n(Kalıtım)</string>
    <string name="uyg9_isim">Uygulama 9\n(Kalıtım 2)</string>
    <string name="uyg10_isim">Uygulama 10\n(Çokbiçimcilik)</string>
    <string name="uyg11_isim">Uygulama 11\n(Diziler)</string>
    <string name="uyg12_isim">Uygulama 12\n(ArrayList)</string>
    <string name="uyg13_isim">Uygulama 13\n(Tankçı ve Topçu Oyunu)</string>
    <string name="goldsoru1_isim">Hesap Makinesi</string>
    <string name="ss165_isim">Sıra Sizde (165)</string>
    <string name="ss168_isim">Sıra Sizde (168)</string>
    <string name="ss173_isim">Sıra Sizde (173)</string>
    <string name="ss188_isim">Sıra Sizde (188)</string>
    <string name="ss206_isim">Sıra Sizde (206)</string>
    <string name="ss214_isim">Sıra Sizde (214)</string>
    <string name="selam_ver_1">Selam Ver 1</string>
    <string name="selam_ver_2">Selam Ver 2</string>
    <string name="sayi">Sayı</string>
    <string name="geri">Geri</string>
    <string name="topla">Topla</string>
    <string name="bolme">Bölme</string>
    <string name="carpma">Çarpma</string>
    <string name="cikar">Çıkar</string>
    <string name="sonuc">Sonuç:</string>
    <string name="uc_sayiyi_topla">3. Sayıyı Topla</string>
    <string name="iki_sayiyi_topla">2. Sayıyı Topla</string>
    <string name="cihaz_adi">Cihaz Adı</string>
    <string name="cihaz_gucu">Cihaz Gücü (Watt)</string>
    <string name="gunluk_kullanilan_saat">Günlük kullanılan saat</string>
    <string name="hesapla">Hesapla</string>
    <string name="merhaba_1">Merhaba 1</string>
    <string name="merhaba_2">Merhaba 2</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="kisa_kenar">Kısa Kenar</string>
    <string name="uzun_kenar">Uzun Kenar</string>
    <string name="diktortgen_alani">Dikdörtgen Alanı</string>
    <string name="kare_alani">Kare Alanı</string>
    <string name="alan">Alan:</string>
    <string name="bir_kenar">1. Kenar</string>
    <string name="iki_kenar">2. Kenar</string>
    <string name="uc_kenar">3. Kenar</string>
    <string name="cesit_kenar">Çeşitkenar</string>
    <string name="ikiz_kenar">İkizkenar</string>
    <string name="es_kenar">Eşkenar</string>
    <string name="cevre">Çevre</string>
    <string name="yas">Yaş</string>
    <string name="kaydet">Kaydet</string>
    <string name="bilgi">Bilgi</string>
    <string name="minibus_kapi_sayisi">Minibüs Kapı Sayısı</string>
    <string name="minibus_maksimum_hizi">Minibüs maksimum hızı</string>
    <string name="minibus_calistir">Minibüs’ü Çalıştır</string>
    <string name="minibus_yolcu_indir">Minibüs Yolcu İndir</string>
    <string name="araba_kapi_sayisi">Araba Kapı Sayısı</string>
    <string name="araba_maksimum_hizi">Araba maksimum hızı</string>
    <string name="arabayi_calistir">Araba’yı Çalıştır</string>
    <string name="araba_ise_git">Araba İşe Git</string>
    <string name="asker_ates_et">Asker Ateş Et</string>
    <string name="tankci_ates_et">Tankçı Ateş Et</string>
    <string name="topcu_ates_et">Topçu Ateş Et</string>
    <string name="indeks">İndeks:</string>
    <string name="toplam">Toplam:</string>
    <string name="ekle">Ekle</string>
    <string name="sifirla">Sıfırla</string>
    <string name="isim">İsim</string>
    <string name="oyun">OYUN</string>
    <string name="topcu_atesi">Topçu Ateşi</string>
    <string name="tankci_atesi">Tankci Ateşi</string>
    <string name="bastan_basla">Baştan Başla</string>
    <string name="topcu_ates_gucu">Topçu Ateş Gücü</string>
    <string name="tankci_ates_gucu">Tankcı Ateş Gücü</string>
    <string name="oyuncu1">1. Oyuncu</string>
    <string name="oyuncu2">2. Oyuncu</string>
    <string name="uc">3</string>
    <string name="bes">5</string>
</resources>