<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnBack"
        android:text="@string/geri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <TextView
        android:id="@+id/txtViewBilgi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilgi"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBilgi"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnArabaKapiSayisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnArabaKapiSayisi"
            android:text="@string/araba_kapi_sayisi" />

        <Button
            android:id="@+id/btnArabaMaksHizi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnArabaMaksHizi"
            android:text="@string/araba_maksimum_hizi" />

        <Button
            android:id="@+id/btnArabaCalistir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnArabaCalistir"
            android:text="@string/arabayi_calistir" />

        <Button
            android:id="@+id/btnArabaIseGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnArabaIseGit"
            android:text="@string/araba_ise_git" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBilgi"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnMinibusKapiSayisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnMinibusKapiSayisi"
            android:text="@string/minibus_kapi_sayisi" />

        <Button
            android:id="@+id/btnMinibusMaksHizi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnMinibusMaksHizi"
            android:text="@string/minibus_maksimum_hizi" />

        <Button
            android:id="@+id/btnMinibusCalistir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnMinibusCalistir"
            android:text="@string/minibus_calistir" />

        <Button
            android:id="@+id/btnMinibusYolcuIndir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnMinibusYolcuIndir"
            android:text="@string/minibus_yolcu_indir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>